--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,5 @@
-POSTGRES_USER=myuser
-POSTGRES_PASSWORD=mypassword
-POSTGRES_DB=mydatabase
-FAKE_USER_AMOUNT=100
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USERNAME=admin
+DATABASE_PASSWORD=password
+DATABASE_NAME=postgres
