--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "incremental": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "Bundler"
+    "moduleResolution": "Node10"
   }
 }
